--- a/bestbid/bidding/templates/bidding/footer.html
+++ b/bestbid/bidding/templates/bidding/footer.html
@@ -86,7 +86,7 @@
 
 	<!-- Copyright -->
 	<div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
-		<a href="http://127.0.0.1:8000/index/"> BestBid.com</a>
+		<a href="http://127.0.0.1:8000/index/"> BestBid.com</a> | Designed and Developed by : Aarsh Sheth, Zarmy Patel, Sneha Malla
 	</div>
 	<!-- Copyright -->
 
