--- a/bestbid/bidding/templates/bidding/reset_password.html
+++ b/bestbid/bidding/templates/bidding/reset_password.html
@@ -21,13 +21,9 @@
 					<br>
 					<h2 style="text-align: center;">Change Password</h2>
 					<br>
-					<form action="{% url 'change_password' %}" method="post">
+					<form action="{% url 'reset_password' %}" method="POST">
 						{% csrf_token %}
-						<fieldset>
-							<div class="form-group">
-								<label for="old">Old Password</label>
-								<input type="password" class="form-control" id="old" name="old" placeholder="Old Password" autocapitalize="false" autocomplete="false" autocorrect="false">
-							</div>
+						<fieldset>								
 							<div class="form-group" id="pwdcheck1">
 								<label for="pwd1">New Password</label>
 								<input type="password" class="form-control" id="pwd1" name="pwd1" placeholder="Create New Password" autocapitalize="false" autocomplete="false" autocorrect="false">
@@ -48,20 +44,15 @@
 									<label class="custom-control-label" for="customSwitch2">Show Password</label>
 								</div>
 							</div>
-							
+
 							<input type="hidden" name="user_id" value="{{ request.session.id }}">
 							<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
-							<button class="btn btn-primary" id="update_btn" disabled="true">Update Password</button>
+							<input type="hidden" name="reset" value="reset">
+							<button class="btn btn-primary" id="update_btn" disabled="true">Save Password</button>
+
 						</fieldset>
 					</form>
-					<br><br>
-					{% if messages %}
-						<ul class="messages">
-							{% for message in messages %}
-							<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-							{% endfor %}
-						</ul>
-					{% endif %}
+					<br>
 				</div>
 
 			{% endblock %}
