--- a/bestbid/bidding/templates/base.html
+++ b/bestbid/bidding/templates/base.html
@@ -17,8 +17,8 @@
 		{% endcomment %}
 		<!-- Flatly theme Bootstrap Files -->
 		<link rel="stylesheet" href="{% static 'themes/flatly/bootstrap.min.css' %}">
-		<link rel="stylesheet" href="{% static 'themes/flatly/_bootswatch.scss' %}">
-		<link rel="stylesheet" href="{% static 'themes/flatly/_variables.scss' %}">
+		{# <link rel="stylesheet" href="{% static 'themes/flatly/_bootswatch.scss' %}"> #}
+		{# <link rel="stylesheet" href="{% static 'themes/flatly/_variables.scss' %}"> #}
 		
 		<!-- Custom CSS File -->
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -53,5 +53,6 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+	
+	<script src="{% static 'js/shadow.js' %}"></script>
 </html>
