--- a/bestbid/bidding/templates/bidding/asset.html
+++ b/bestbid/bidding/templates/bidding/asset.html
@@ -15,92 +15,114 @@
 			{% block body %}
 				<div class="container" style="justify-content: center;">
 					
-					<!-- Allow bid only if time is between 10 and 12 -->
-					{% if request.session.user_type == 'buyer' and not allow_bid %}
-						<div class="alert alert-dismissible alert-info">
+					{% if asset.sold %}
+						<div class="alert alert-dismissible alert-secondary">
 							<button type="button" class="close" data-dismiss="alert">&times;</button>
-							<h4 class="alert-heading">Bid Currently Disabled</h4>
-							<p class="mb-0">Bid can only be performed between 10:00 and 14:00</p>
+							<h4 class="alert-heading">Asset is Sold</h4>
 						</div>
-					{% endif %}
-					
-					<!-- If Bid Placed is less than previous bid -->
-					{% if min_value_error %}
-						<div class="alert alert-dismissible alert-info">
+					{% else %}
+						
+						<!-- Allow bid only if time is between 10 and 13 -->
+						{% if request.session.user_type == 'buyer' and not allow_bid %}
+							<div class="alert alert-dismissible alert-info">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<h4 class="alert-heading">Bid Currently Disabled</h4>
+								<p class="mb-0">Bid can only be performed between 10:00 and 13:00</p>
+							</div>
+						{% endif %}
+						
+						<!-- If Bid Placed is less than previous bid -->
+						{% if min_value_error %}
+							<div class="alert alert-dismissible alert-info">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<h4 class="alert-heading">Bid Cannot Be Placed</h4>
+								<p class="mb-0">New Bid Value must be greater than Previous bid vlaue.</p>
+							</div>
+						{% endif %}
+
+						<!-- If Bid is Placed Successfully -->
+						{% if placed %}
+							<div class="alert alert-dismissible alert-success">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<h4 class="alert-heading">Bid Placed</h4>
+								<p class="mb-0"></p>
+							</div>
+						{% endif %}
+
+						<!-- Bid about to end -->
+						{% if about_to_end %}
+						<div class="alert alert-dismissible alert-warning">
 							<button type="button" class="close" data-dismiss="alert">&times;</button>
-							<h4 class="alert-heading">Bid Cannot Be Placed</h4>
-							<p class="mb-0">New Bid Value must be greater than Previous bid vlaue.</p>
+							<h4 class="alert-heading">Bid is About to end</h4>
+							<p class="mb-0">Bids will stop at 12:59</p>
 						</div>
+						{% endif %}
+
 					{% endif %}
 
-					<!-- If Bid is Placed Successfully -->
-					{% if placed %}
-						<div class="alert alert-dismissible alert-success">
-							<button type="button" class="close" data-dismiss="alert">&times;</button>
-							<h4 class="alert-heading">Bid Placed</h4>
-							<p class="mb-0"></p>
-						</div>
-					{% endif %}
-
-					<br>
-					<h2 style="text-align: center;">{{ asset.name }}</h2>
-					<br>
 					<!-- Display Asset -->
-					<div class="row asset-details" style="display: inline-flex;">
-						<div class="img-box col-sm-12 col-md-6" style="float: left;">
-							<img src="{{ asset.image.url }}" alt="{{ asset.name }}" style="display: block" width="100%;">
-						</div>
-						<div class="asset-price col-sm-12 col-md-6" style="float: inline-start;">
-							<br>
-							<h4>Baseprice : ${{ asset.baseprice }}</h4>
-							<input type="hidden" name="baseprice" id="baseprice" value="{{ asset.baseprice }}">
-							<br>
-							<h5>Seller : {{ asset.seller|title }}</h5>
-							<br>
-
-							<!-- For Bidding Button and TextInput-->
-							{% if request.session.user_type == "buyer" %}
-								<div class="form-group ml-10" style="float: inline-end;">
-									<form action="{% url 'asset' asset.id %}" method="post">
-										{% csrf_token %}
-										<div class="input-group">
-											<div class="input-group-prepend">
-												<span class="input-group-text">$</span>
-											</div>
-											<input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Bid Value" name="bid_value" id="bid_value" min="{{ asset.baseprice|add:'1' }}" autofocus required>
-											<div class="input-group-append">
-												<input type="hidden" name="user_id" value="{{ request.session.id }}">
-												<input type="hidden" name="asset_id" value="{{ asset.id }}">
-												<input type="hidden" name="place_bid" value="place_bid">
-												<button class="btn btn-primary" type="submit" id="bid_btn"
-													{% if not allow_bid %}
-														disabled ="true" aria-disabled="true"
-													{% endif %}
-												>Place Bid</button>
-											</div>
-										</div>
-									</form>
+					<br>
+					<div>
+						<!-- Asset Image and Details -->
+						<div class="card " style="border-radius: 7px;">
+							<div class="row align-items-center">
+								<div class="col asset-img" style="display: inline-flex;">
+									<a href="{{ asset.get_abs_url }}">
+										<img src="{{ asset.image.url }}" alt="{{ asset.name|title }}" style="display: block; border-radius: 7px;" width="100%;">
+									</a>
 								</div>
-							{% endif %}
+								<div class="col">
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item"><h3>{{ asset.name }}</h3></li>
+										<li class="list-group-item"><h4>Baseprice : {{ asset.baseprice }}</h4></li>
+										<li class="list-group-item"><h5>Seller : {{ asset.seller|title }}</h5></li>
+										<li class="list-group-item">
+											<!-- For Bidding Button and TextInput-->
+											{% if request.session.user_type == "buyer" and not asset.sold %}
+											<div class="form-group ml-10">
+												<form action="{% url 'asset' asset.id %}" method="post">
+													{% csrf_token %}
+													<div class="input-group">
+														<div class="input-group-prepend">
+															<span class="input-group-text">$</span>
+														</div>
+														<input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Bid Value" name="bid_value" id="bid_value" min="{{ asset.baseprice|add:'1' }}" autofocus required>
+														<div class="input-group-append">
+															<input type="hidden" name="user_id" value="{{ request.session.id }}">
+															<input type="hidden" name="asset_id" value="{{ asset.id }}">
+															<input type="hidden" name="place_bid" value="place_bid">
+															<button class="btn btn-primary" type="submit" id="bid_btn"
+																{% if not allow_bid %}
+																	disabled ="true" aria-disabled="true"
+																{% endif %}
+															>Place Bid</button>
+														</div>
+													</div>
+												</form>
+											</div>
+										{% endif %}
+										</li>
+									</ul>
+								</div>
+							</div>
 						</div>
 						<br>
-					</div>
-					<br>
+						<br>
 
-					<!-- Asset Description -->
-					<div class="card">
-						<h3 class="card-header">Asset Description</h3>
-						<div class="card-body"><h4>{{ asset.details }}</h4></div>
+						<!-- Asset Description -->
+						<div class="card">
+							<h3 class="card-header">Asset Description</h3>
+							<div class="card-body"><h5>{{ asset.details }}</h5></div>
+						</div>
+						<br><br>
 					</div>
-					<br>
-					<button type="button" class="btn btn-info" onclick="location.reload(true);">Reload page</button>
-					<br><br>
 
 					<!-- Live Auction Status -->
-					{% if live_auction_status %}
-							
+					{% if live_auction_status and not asset.sold %}
+						<button type="button" class="btn btn-info" onclick="location.reload(true);">Reload page</button>
+						<br><br>
 						<div class="bid" style="justify-content: center;" id="live_bid">
-							<table class="table table-hover">
+							<table class="table table-hover table-striped">
 								<thead>
 									<tr>
 										<th scope="col">Sr No.</th>
@@ -109,23 +131,24 @@
 										<th scope="col">Placed Bid for Price</th>
 									</tr>
 								</thead>
-								{% for item in live_auction_status %}
-									<tbody>
+								<tbody>
+									{% for item in live_auction_status %}
 										<tr class="table">
 											<th scope="row">{{ forloop.counter }}</th>
 											<td>{{ item.asset.name }}</td>
 											<td>{{ item.buyer }}</td>
 											<td>{{ item.price }}</td>
 										</tr>
-									</tbody>
-								{% endfor %}
+										{% endfor %}
+								</tbody>
 							</table>
 						</div>
 					
 					{% endif %}	
+
 					<!-- Delete and Edit Buttons -->
 					{% if request.session.id == asset.seller.id %}
-						{% if request.session.user_type == "seller" %}
+						{% if request.session.user_type == "seller" and not asset.sold %}
 							<button type="submit" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#delete">Delete</button>
 							<br><br>
 							<form action="{% url 'asset' asset.id 'edit' %}" method="post">
