--- a/bestbid/bidding/templates/bidding/edit_asset.html
+++ b/bestbid/bidding/templates/bidding/edit_asset.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="UTF-8">
 		{% block title %}
-			<title>Upload | BestBid.com</title>
+			<title>Edit Asset | BestBid.com</title>
 		{% endblock %}
 	</head>
 
@@ -24,7 +24,7 @@
 							<div class="form">
 								<div class="form-group">
 									<label class="col-form-label" for="name">Name</label>
-									<input type="text" class="form-control" placeholder="Name of the Asset" id="name" name="name" value="{{ asset.name }}">
+									<input type="text" class="form-control" placeholder="Name of the Asset" name="name" value="{{ asset.name }}">
 								</div>
 								<div class="form-group">
 									<label class="control-label">Baseprice</label>
@@ -42,7 +42,7 @@
 								</div>
 								<div class="form-group">
 									<label for="selectOption">Category</label>
-									<select class="custom-select" id="selectedOption" name="selectedOption">
+									<select class="custom-select" name="selectedOption">
 											{% if asset.category == 'car' %}
 												<option selected value="car">Car</option>
 												<option value="house">House</option>
@@ -54,22 +54,17 @@
 								</div>
 								<div class="form-group">
 									<label for="description">Description</label>
-									<textarea class="form-control" id="description" rows="3" placeholder="Description for the Asset" name="description">{{ asset.details }}</textarea>
-								</div>
-								<div class="form-group">
-										<label for="exampleInputFile">Image</label>
-										<input type="file" class="form-control-file" aria-describedby="imageHelp" name="image" value="{{ asset.image.url }}">
+									<textarea class="form-control" rows="3" placeholder="Description for the Asset" name="description">{{ asset.details }}</textarea>
 								</div>
 								<div class="form-group">
 										<label class="control-label" for="{{ asset.seller.name }}">Seller</label>
-										<input class="form-control" id="{{ asset.seller.name }}" type="text" value="{{ asset.seller.name }}" readonly="" name="user_name">
+										<input class="form-control" type="text" value="{{ asset.seller.name }}" readonly="" name="user_name">
 								  </div>
 							</div>
 							<input type="hidden" name="user_id" value="{{ request.session.id }}">
 							<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
-							<div class="form-group">
-								<button class="btn btn-primary">Update</button>
-							</div>
+							<input type="hidden" name="asset_id" value="{{ 	asset.id }}">
+							<button class="btn btn-primary">Update</button>
 						</fieldset>
 					</form>
 				</main>
