--- a/bestbid/bidding/templates/bidding/login.html
+++ b/bestbid/bidding/templates/bidding/login.html
@@ -10,12 +10,12 @@
 
 	<body>
 		{% block body %}
-		<main class="container">
+		<main class="container w-50">
 			<br>
 			<h1 style="text-align: center;">Login</h1>
 			<br>
-			<div class="row" style="width: 100%;">
-				<div class="card border-primary mb-3 col-md-4">
+			<div class="row">
+				<div class="card col border-primary">
 					<div class="card-header">Seller</div>
 					<div class="card-body">
 						<h4 class="card-title">Login as Seller</h4>
@@ -23,7 +23,7 @@
 					</div>
 				</div>
 				&nbsp;&nbsp;&nbsp;
-				<div class="card border-primary mb-3 col-md-4">
+				<div class="card col border-primary">
 					<div class="card-header">Buyer</div>
 					<div class="card-body">
 					<h4 class="card-title">Login as Buyer</h4>
@@ -31,7 +31,7 @@
 					</div>
 				</div>
 			</div>
-
+			<br>
 			<form action="{% url 'registration' %}">
 				<button type="submit"class="btn btn-primary my-2 my-sm-0">Registration</button>
 			</form>
