--- a/bestbid/bidding/templates/bidding/manager.html
+++ b/bestbid/bidding/templates/bidding/manager.html
@@ -19,18 +19,18 @@
 		<div class="container w-50">
 			<main>
 				<br>
-				<h1 style="text-align: center;">Admin Login</h1>
+				<h1 style="text-align: center;">Manager Login</h1>
 				<br>
 
-				<form action="{% url 'adminLogin' %}" method="POST">
+				<form action="{% url 'manager' %}" method="POST">
 					{% csrf_token %}
 					<div class="form-group">
 						<label for="exampleInputEmail1">Email address</label>
-						<input type="email" class="form-control" name="adminEmail" aria-describedby="emailHelp" placeholder="Admin email" required>
+						<input type="email" class="form-control" name="managerEmail" aria-describedby="emailHelp" placeholder="Manager Email" required>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputPassword1">Password</label>
-						<input type="password" class="form-control" name="adminPassword" placeholder="Admin Password" required>
+						<input type="password" class="form-control" name="managerPassword" placeholder="Manager Password" required>
 					</div>
 					<input type="submit" class="btn btn-primary" value="Submit">
 				</form>
