--- a/bestbid/bidding/templates/bidding/bid.html
+++ b/bestbid/bidding/templates/bidding/bid.html
@@ -47,11 +47,12 @@
 
 					<div class="jumbotron">
 						<h1 class="display-3">BID</h1>
-						<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+						<p class="lead">This page allows you to bid on assets. Bid timings are 10:00 AM - 01:00 PM.</p>
+						<p class="lead">Asset will be sold to the highest bidder</p>
 						<hr class="my-4">
-						<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+						<p>To Bid, you must use a buyer account.</p>
 						<p class="lead">
-							<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							<a class="btn btn-primary btn-lg" href="#" role="button">Bid Now</a>
 						</p>
 					</div>
 					<br>
